--- a/index.html
+++ b/index.html
@@ -388,6 +388,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-item">
+                <h3 class="footer-soc-title">Подпишитесь на рассылку</h3>
+                <form class="footer-mail-thumb">
+                    <input class="footer-mail-input" type="email" name="user-email" placeholder="E-mail">
+                    <button class="apply-button-features accent-button button" type="submit">Подписаться
+                        <svg class="icon-send" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
