--- a/index.html
+++ b/index.html
@@ -46,13 +46,49 @@
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="accent-button button main-button-features" data-modal-open>Заказать услугу</button>
             </div>
-            <div class="backdrop is-hidden" data-modal>
+            <!-- <div class="backdrop is-hidden" data-modal> -->
                 <div class="modal">
                     <button class="close-modal-button" data-modal-close>
-                        <svg width="30" height="30">
+                        <svg class="icon-close" width="30" height="30">
                             <use href="./images/icons.svg#close"></use>
                         </svg>
                     </button>
+                    <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+                    <form autocomplete="off">
+                        <ul class="form-list">
+                            <li class="form-item">
+                                <label class="label-field" for="name">Имя</label>
+                                <div class="input-field-thumb">
+                                    <input class="input-field" type="text" name="name" id="name">
+                                    <svg class="icon-form" width="18" height="18">
+                                        <use href="./images/icons.svg#person-black"></use>
+                                    </svg>
+                                </div>
+                            </li>
+                            <li class="form-item">
+                                <label class="label-field" for="tel">Телефон</label>
+                                <div class="input-field-thumb">
+                                    <input class="input-field" type="tel" name="tel" id="tel">
+                                    <svg class="icon-form" width="18" height="18">
+                                        <use href="./images/icons.svg#phone-black"></use>
+                                    </svg>
+                                </div>
+                            </li>
+                            <li class="form-item">
+                                <label class="label-field" for="email">Почта</label>
+                                <div class="input-field-thumb">
+                                    <input class="input-field" type="email" name="email" id="email">
+                                    <svg class="icon-form" width="18" height="18">
+                                        <use href="./images/icons.svg#email-black"></use>
+                                    </svg>
+                                </div>
+                            </li>
+                            <li class="form-item">
+                                <label class="label-field" for="comment">Комментарий</label>
+                                <textarea class="input-field text-area" name="comment" id="comment" placeholder="Введите текст"></textarea>
+                            </li>
+                        </ul>
+                    </form>
                 </div>
             </div>
         </section>
