--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="accent-button button main-button-features" data-modal-open>Заказать услугу</button>
             </div>
-            <!-- <div class="backdrop is-hidden" data-modal> -->
+            <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <button class="close-modal-button" data-modal-close>
                         <svg class="icon-close" width="30" height="30">
