Остался только чекбокс

--- a/index.html
+++ b/index.html
@@ -87,7 +87,15 @@
                                 <label class="label-field" for="comment">Комментарий</label>
                                 <textarea class="input-field text-area" name="comment" id="comment" placeholder="Введите текст"></textarea>
                             </li>
+                            <li class="form-item">
+                                <input class="checkbox-field" type="checkbox" name="privacy-policy" id="privacy-policy">
+                                <label class="checkbox-label-field" for="privacy-policy">Соглашаюсь с рассылкой и принимаю <a class="privacy-policy-link" href="#">Условия договора</a></label>
+                            </li>
                         </ul>
+                        <!-- <div class="privacy-policy-thumb">
+                            <input class="checkbox-field" type="checkbox" name="privacy-policy" id="privacy-policy">
+                            <label class="checkbox-label-field" for="privacy-policy">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+                        </div> -->
                     </form>
                 </div>
             </div>
